<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:text="@string/TextView" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="292dp"
        app:srcCompat="@drawable/pet" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/PLAY"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnFeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/FEED"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnClean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/CLEAN"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewPlay"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_weight="1"
            android:text="@string/PLAY" />

        <TextView
            android:id="@+id/textViewFeed"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:text="@string/FEED" />

        <TextView
            android:id="@+id/textViewClean"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_weight="1"
            android:text="@string/CLEAN" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="92dp"
            android:layout_weight="1"
            android:text="@string/textview" />
    </LinearLayout>

</LinearLayout>